--- a/front/src/app/modals/login/login.component.html
+++ b/front/src/app/modals/login/login.component.html
@@ -7,7 +7,7 @@
 	<div class="modal-text">
 		<p>For now, you can only log in using one of the social medias bellow. Choose your favorite method to continue.</p>
 		<p>
-			<a (click)="openLoginPopup('google')" [href]="getLoginUrl('google')" target="popup"><i class="alt fab fa-google"></i></a>
+			<a (click)="openLoginPopup(EAuthProvider.Google)" [href]="getLoginUrl(EAuthProvider.Google)" target="popup"><i class="alt fab fa-google"></i></a>
 		</p>
 	</div>
 	<div class="modal-footer">
