--- a/front/src/app/pages/blog/article/article.component.html
+++ b/front/src/app/pages/blog/article/article.component.html
@@ -1,1 +1,7 @@
-<showdown [src]="getRawContentUrl(article)"></showdown>
+<h1>
+	{{title}}
+</h1>
+
+<p>
+	<showdown [value]="article.summary"></showdown>
+</p>
