--- a/front/src/app/pages/blog/blog.component.html
+++ b/front/src/app/pages/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let article of pagedItems" id="blog">
+<div *ngFor="let article of allItems" id="blog">
 	<hr class="major" />
 	<article>
 		<header class="major">
