--- a/front/src/app/modals/login/login.component.html
+++ b/front/src/app/modals/login/login.component.html
@@ -5,7 +5,23 @@
 	</div>
 	
 	<div class="modal-text">
-		<p>For now, you can only log in using one of the social medias bellow. Choose your favorite method to continue.</p>
+
+		<form action="/login" method="post">
+			<div [class]="'row gtr-uniform' + (isSync ? ' sync' : '')">
+				<div class="col-6 col-12-xsmall">
+					<app-field [field]="fieldLogin.email" key="email" [form]="formLogin"></app-field>
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<app-field [field]="fieldLogin.password" key="password" [form]="formLogin"></app-field>
+				</div>
+				<div class="col-12">
+					<p *ngIf="(formSendState | async) === false">Form sending failed. Please retry later.</p>
+					<button class="button primary fit" [disabled]="!formLogin.valid"><i class="fas fa-cubes"></i> Login </button>
+				</div>
+			</div>
+		</form>
+<!-- 
+		<p>For now, you can only log in using one of the social medias bellow. Choose your favorite method to continue.</p> -->
 		<p>
 			<a (click)="openLoginPopup(EAuthProvider.Google)" [href]="getLoginUrl(EAuthProvider.Google)" target="popup"><i class="alt fab fa-google"></i></a>
 			<a (click)="openLoginPopup(EAuthProvider.Github)" [href]="getLoginUrl(EAuthProvider.Github)" target="popup"><i class="alt fab fa-github"></i></a>
