--- a/front/src/app/pages/shop/shop.component.html
+++ b/front/src/app/pages/shop/shop.component.html
@@ -27,8 +27,12 @@
 	</section>
 
 	<!-- Two -->
-	<section id="two" class="spotlights">
-		<app-product *ngFor="let product of products | async" [product]="product"></app-product>
+	<section id="two" class="tiles">
+		<article *ngFor="let product of products | async">
+			<header class="major">
+				<app-product [product]="product"></app-product>
+			</header>
+		</article>
 	</section>
 	
 	<!-- Three -->
