feat(front): WIP Template for legal notice

--- a/front/src/app/components/footer/footer.component.html
+++ b/front/src/app/components/footer/footer.component.html
@@ -10,5 +10,8 @@
 			<li>Developed by <a href="https://ithoughts.io/">GerkinDev</a> & Azkali</li>
 			<li>Hosted by <a href="https://ithoughts.io/">GerkinDev</a></li>
 		</ul>
+		<ul class="copyright">
+			<li><a routerLink="legal-notice">Legal Notice</a></li>
+		</ul>
 	</div>
 </footer>
