feat(front/legal-notice): WIP Added correct infos

--- a/front/src/app/components/legal-notice/legal-notice.component.html
+++ b/front/src/app/components/legal-notice/legal-notice.component.html
@@ -1,78 +1,76 @@
 <h1>LEGAL NOTICE OF THE WEBSITE</h1>
 <p>
 
-  This website has been developed and published by Yooz, a French company , having a capital of 100,000 euros,
-  with its registered office located at Parc d'Andron - Le Séquoia - 30470 Aimargues (France), registered in the Trade
-  and Corporations Register of Nimes under the number 808 386 148,
-  Contact e-mail: contact@yooz.fr
-  Head of publication: Didier Charpentier
-  The hosting has been performed by N-Gine Innovation, a computer science corporation with a capital of 100,000
-  euros, with its registered office located at Nimes, France, registered in the Trade and Corporations Register of
-  Nimes under the number 498 275 544, telephone no.: +33983007620.
-</p>
+  This website has been developed and published by Azkali & GerkinDev
+
+  Contact e-mail: e-make@ithoughts.io
+
+  Head of publication: Azkali Manad
+
+  The hosting has been performed by GerkinDev </p>
 
   <h1>1. Conditions of Use for the Website</h1>
 <p>
 
   Any person (hereinafter referred to as the “Internet User”) using/consulting the website accessible at the following
-  URL address or any URL address redirecting to this address: www.justyoozit.com (hereinafter referred to as the
+  URL address or any URL address redirecting to this address: www.e-make.ithoughts.io (hereinafter referred to as the
   “Website”) acknowledges that he/she has read and understood the present legal notice.
   Access to the Website is granted on the understanding that these conditions are accepted without reserve by the
   Internet User.
   
   The Internet User accepts that all elements presented on the Website are protected by copyright and/or other
   forms of industrial property rights; the Internet User undertakes to fully respect the rights cited above.
-  Yooz does not warrant the Website to be fit for any specific Internet User requirement or particular purpose. All
-  information contained in the Website is provided on an "as is" basis, without guarantee of any sort. Yooz does not
+  E-Make does not warrant the Website to be fit for any specific Internet User requirement or particular purpose. All
+  information contained in the Website is provided on an "as is" basis, without guarantee of any sort. E-Make does not
   offer any implicit guarantee as to the quality, topicality, ownership or absence of counterfeiting for any of the
   information presented on the Website.
   
-  Yooz can in no way be held responsible for errors or omissions regarding the Website's content or resulting from
+  E-Make can in no way be held responsible for errors or omissions regarding the Website's content or resulting from
   use of the information contained in the Website, nor for access speeds and conditions, service non-availability or
   interruption, nor for any damage occasioned to the Internet User directly or indirectly consequent to using the
   Website or the information contained therein.
   
-  Internet Users who supply information (other than personal information) to Yooz hereby grant to Yooz all
-  transferable rights relating to said information and authorize Yooz to use said information as best it sees fit.
+  Internet Users who supply information (other than personal information) to E-Make hereby grant to E-Make all
+  transferable rights relating to said information and authorize E-Make to use said information as best it sees fit.
   Internet Users warrant that the information provided does not infringe the intellectual property rights of third
   parties nor any other applicable legislation.
   
-  Yooz may terminate or modify the nature of the services and/or conditions governing the use of the Website at any
+  E-Make may terminate or modify the nature of the services and/or conditions governing the use of the Website at any
   time and without notice being required.
   
   The Internet User declares that she or he is aware of the technical risks inherent in the Internet network and
   acknowledges that no site can be kept safe from intrusion by unauthorized third parties and may become harmed
   as a result; that information circulating on the Internet is susceptible to interception by third parties and that under
-  these circumstances Yooz is unable to guarantee that Internet Users will not be victim of such actions.
+  these circumstances E-Make is unable to guarantee that Internet Users will not be victim of such actions.
   
-  If the Website contains hyperlinks to websites under the control of third parties: Yooz has no control over these
+  If the Website contains hyperlinks to websites under the control of third parties: E-Make has no control over these
   sites and cannot accept any responsibility for their content (notably for their truthfulness, topicality, quality,
   operation, comprehensiveness and relevance) nor for the use to which they may be put. Insertion of said hyperlinks
-  in no way implies that Yooz approves of the elements contained in these sites.
+  in no way implies that E-Make approves of the elements contained in these sites.
   
   Use of the Website, and these terms and conditions of use, are governed by the laws of France. The Commercial
   Court at Nimes shall be the only competent tribunal before which disputes may be heard where no amicable
-  agreement between Yooz and the Internet User is possible.
+  agreement between E-Make and the Internet User is possible.
 </p>
   
   <h1>2. Data Protection</h1>
 
 <p>
 
-  Yooz may gather information about the Internet User, such as name, job title, professional contact details, email
+  E-Make may gather information about the Internet User, such as name, job title, professional contact details, email
   address, etc., in order to assist the Internet User with his or her request (such as registering for a seminar, setting up
-  a meeting, request for documentation/information, etc.) and to help Yooz gain a better knowledge of the Internet
+  a meeting, request for documentation/information, etc.) and to help E-Make gain a better knowledge of the Internet
   User, contact the Internet User, or ensure that the Internet User is able to benefit from any special promotions or
   communications.
   
   Whenever the Internet User completes a questionnaire/form on the Website, or whenever the Internet User sends
-  an email to Yooz:
+  an email to E-Make:
   
   • the Internet User is informed whether his or her answers are voluntary or compulsory in nature;
-  • the information provided is intended for use by Yooz and its affiliates in their customer/contacts data files.
-  • Yooz warrants that all personal data submitted via the Website will be treated in accordance with Data
+  • the information provided is intended for use by E-Make and its affiliates in their customer/contacts data files.
+  • E-Make warrants that all personal data submitted via the Website will be treated in accordance with Data
   Protection Act 1998
-  The Internet User can request a copy of its personal data that Yooz hold, or ask Yooz to remove or correct
+  The Internet User can request a copy of its personal data that E-Make hold, or ask E-Make to remove or correct
   inaccurate data in accordance with Data Protection Act 1998.
   These rights may be exercised by writing to the contact email address.
   
@@ -88,7 +86,7 @@
   Google Analytics uses cookies. The information generated by the cookie about the Internet User use of the Website
   (including his/her IP address) will be transmitted to and stored by Google on servers in the United States. Google
   will use this information for the purpose of evaluating the Internet user use of the Website, compiling reports on
-  website activity for Yooz and providing other services relating to Website activity and internet usage. Google may
+  website activity for E-Make and providing other services relating to Website activity and internet usage. Google may
   also transfer this information to third parties where required to do so by law, or where such third parties process
   the information on Google's behalf. Google will not associate the Internet User IP address with any other data held
   by Google.
@@ -108,16 +106,16 @@
   
   Text, illustrations, graphics, images, appellations, logos, slogans and brand names, whether registered or not,
   depicted on the Website, are subject to industrial and/or intellectual property rights and are the exclusive property
-  of Yooz (unless otherwise stated).No reproduction, representation, disclosure, distribution, adaptation, translation or modification, whether partial or
+  of E-Make (unless otherwise stated).No reproduction, representation, disclosure, distribution, adaptation, translation or modification, whether partial or
   entire, nor transfer to another site, even for non-commercial purposes, and irrespective of the medium and/or
-  process employed, may be made without prior written approval from Yooz.
+  process employed, may be made without prior written approval from E-Make.
   
   The data, or elements of it, presented on the Website may not be used for commercial purposes of any nature
-  whatsoever without prior written approval from Yooz.
+  whatsoever without prior written approval from E-Make.
   Violation of any of the author's copyright constitutes forgery and will open the perpetrator to civil and criminal
   proceedings.
 
-  Legal notice for Yooz websites
-  As a document automated process and an invoice automation software company, Yooz publishes its websites to
+  Legal notice for E-Make websites
+  As a document automated process and an invoice automation software company, E-Make publishes its websites to
   promote its brand image and its portfolio of software
 </p>
